force-app/main/default/objects/Monthly_Performance__c/Monthly_Performance__c.object-meta.xml
<CustomObject>
    <description>Aggregates performance metrics per Sales Rep</description>
    <label>Monthly Performance</label>
    <nameField>
        <label>Monthly Performance Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Monthly Performances</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>