force-app/main/default/objects/Monthly_Performance__c/fields/Month_Year__c.field-meta.xml
<CustomField>
    <fullName>Month_Year__c</fullName>
    <label>Month/Year</label>
    <type>Date</type>
</CustomField>