force-app/main/default/objects/Monthly_Performance__c/fields/Performance_Rating__c.field-meta.xml
<CustomField>
    <fullName>Performance_Rating__c</fullName>
    <formula>IF(Weighted_Score__c &gt;= 90, &quot;A&quot;, IF(Weighted_Score__c &gt;= 75, &quot;B&quot;, &quot;C&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Performance Rating</label>
    <type>Text</type>
</CustomField>