force-app/main/default/objects/Monthly_Performance__c/fields/Sales_Target__c.field-meta.xml
<CustomField>
    <fullName>Sales_Target__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Target</label>
    <referenceTo>Sales_Target__c</referenceTo>
    <relationshipLabel>Monthly Performances</relationshipLabel>
    <relationshipName>Monthly_Performances</relationshipName>
    <type>Lookup</type>
</CustomField>