force-app/main/default/objects/Monthly_Performance__c/fields/Visit_Completion__c.field-meta.xml
<CustomField>
    <fullName>Visit_Completion__c</fullName>
    <formula>Completed_Visits__c / Planned_Visits__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Visit Completion %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>