force-app/main/default/objects/Monthly_Performance__c/fields/Weight_Achievement__c.field-meta.xml
<CustomField>
    <fullName>Weight_Achievement__c</fullName>
    <label>Weight Achievement</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>