force-app/main/default/objects/Monthly_Performance__c/fields/Weight_Visits__c.field-meta.xml
<CustomField>
    <fullName>Weight_Visits__c</fullName>
    <label>Weight Visits</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>